--- a/contest-gallery/changelog.txt
+++ b/contest-gallery/changelog.txt
@@ -1,5 +1,13 @@
 Contest Gallery
 
+= V24.0.0 =
+* NEW: cg_galleries... shortcode types. Place cg_galleries shortcode on your page and click through galleries without page reload.
+* NEW: Add ids to a cg_galleries... shortcode if you like to display only certain galleries.
+* NEW: Either latest added, highest rated or highest commented entry can be displayed in galleries view as preview for a gallery.
+* NEW: Main title, sub title and third title can be configured as preview for a gallery in galleries view.
+* FIXED: Some special chars were not showing correctly in title of gallery view.
+* FIXED: Gallery title was not displayed in no voting gallery if comments for no voting gallery were deactivated.
+
 = V23.1.8 =
 * FIXED: Wrong entries URLs were displayed in certain cases in backend entries area.
 
