--- a/contest-gallery/changelog.txt
+++ b/contest-gallery/changelog.txt
@@ -1,5 +1,10 @@
 Contest Gallery
 
+= V24.0.2 =
+* NEW: When using cg_galleries... shortcodes and main title for a gallery is given to appear in galleries view, then the main title is also shown for the gallery if gallery is clicked from cg_galleries... shortcode type.
+* FIXED: cg_galleries... shortcodes were not always displayed correctly.
+* FIXED: When loading a gallery from cg_galleries... view below content jumped to the top of gallery container when loading.
+
 = V24.0.1 =
 * NEW: YouTube media start time is now possible to add when "Add social embed".
 * FIXED: Undefined array key error when adding social embed.
