--- a/contest-gallery/changelog.txt
+++ b/contest-gallery/changelog.txt
@@ -1,5 +1,9 @@
 Contest Gallery
 
+= V24.0.5 =
+* FIXED: Security issue.
+* FIXED: Sorted images in backend were not all visible in frontend if "Custom sorting" was activated, as preselect or select, in frontend.
+
 = V24.0.4 =
 * FIXED: Security issues.
 
