--- a/contest-gallery/changelog.txt
+++ b/contest-gallery/changelog.txt
@@ -1,5 +1,9 @@
 Contest Gallery
 
+= V24.0.7 =
+* NEW: Lost password login area logic improved.
+* NEW: PositionNumber changed when creating tables from TINYINT to INT(11).
+
 = V24.0.6 =
 * FIXED: Sorting of entries was only working till 127 entries correctly, due to TINYINT was used as SQL field type. Changed to INT(11).
 
