--- a/contest-gallery/changelog.txt
+++ b/contest-gallery/changelog.txt
@@ -1,5 +1,8 @@
 Contest Gallery
 
+= V25.0.3 =
+* NEW: "Show date entry added/uploaded to gallery" in frontend. Can be configured in "Gallery view" options.
+
 = V25.0.2 =
 * NEW: Long descriptions for entries, "Third title" in "Edit contact form", now available in normal version.
 * NEW: Attach an entry to a registered user of your choice.
