--- a/contest-gallery/changelog.txt
+++ b/contest-gallery/changelog.txt
@@ -1,5 +1,11 @@
 Contest Gallery
 
+= V25.0.4 =
+* FIXED: Opening "Slider view" from masonry view in full window mode causes high distance between thumbnails in slider images overview.
+* FIXED: Content not always centered when opening "Blog view" or "Slider view" in full window mode.
+* FIXED: Line break between stars on mobile when voting if 10 stars voting is activated.
+* FIXED: After commenting an image as logged in user and then opening the image again, the nicknames for comments of logged in users disappear.
+
 = V25.0.3 =
 * NEW: "Show date entry added/uploaded to gallery" in frontend. Can be configured in "Gallery view" options.
 
