--- a/contest-gallery/changelog.txt
+++ b/contest-gallery/changelog.txt
@@ -1,5 +1,13 @@
 Contest Gallery
 
+= V25.0.8 =
+* NEW: "Field title gallery or entry view" added in "Contact form" to input, textarea, select, select-categories, date and URL types of fields. Will be visible instead of "Contact form field title" in gallery or entry view, if set.
+* NEW: "Forward to the URL by click on an entry in masonry view" added to URL contact form field.
+* NEW: Selected role groups which can edit Contest Gallery "Registration form" fields are now also  use "Logout URL" and "Back to gallery URL" if configured in "Login options".
+* FIXED: "Login form" did not work for all cases.
+* FIXED: Registration "Confirmation e-mail" did not work for all cases.
+* FIXED: Contest is over not shown when using cg_galleries... type of shortcode.
+
 = V25.0.6 =
 * FIXED: Sorting in "Masonry view" did not work.
 * FIXED: Agreeing YouTube policies in full window blog view broke the view.
