--- a/contest-gallery/changelog.txt
+++ b/contest-gallery/changelog.txt
@@ -1,5 +1,12 @@
 Contest Gallery
 
+= V26.0.0 =
+* NEW: Stripe as payment processing added. Use Stripe payment methods in your ecommerce checkout.
+* NEW: Dynamic up to 10 columns appears now in masonry view, instead of maximum only  3. Depends on container width.
+* NEW: Allow search engines like Google to index or follow the /contest-galleries... pages and subpages, options. By default is deactivated.
+* NEW: Allow sort by rating possible if "Show only user votes" or "Hide voting until user vote" is activated, for cg_gallery_no_voting and cg_gallery_winner shortcodes.
+* FIXED: Changing options for "Shortcode interval configuration" stuck if options page not reloaded for a while.
+
 = V25.1.3 =
 * NEW: Improved frontend shortcodes load visually for slower connections.
 * FIXED: "Export all votes" query took too long.
