--- a/contest-gallery/changelog.txt
+++ b/contest-gallery/changelog.txt
@@ -1,5 +1,11 @@
 Contest Gallery
 
+= V26.0.6 =
+* NEW: "Show or hide back to galleries button on gallery landing page" option added in "Gallery view" options for every type of cg_gallery... shortcode.
+* NEW: "Back to galleries button custom URL on gallery landing page" option added in "Gallery view" options for every type of cg_gallery... shortcode.
+* NEW: Create real PDF preview image when adding a PDF file in backend or frontend.
+* FIXED: Different little bugs.
+
 = V26.0.5.1 =
 * FIXED: Adding cg_galleries... type of shortcode to a page or post not possible in WordPress version 6.8 and higher.
 
